Fixed all word wrapping issues with messages, feedbacks, and store description and added version names to related static css files.

--- a/static/manage/css/feedback.1.0.css
+++ b/static/manage/css/feedback.1.0.css
@@ -2,7 +2,7 @@
 	width: 656px;
 }
 
-#id_message {
+#id_body {
 	width: 656px;
 	height: 200px;
 }
@@ -52,9 +52,11 @@ div.white-box div.sect.meta {
 div.white-box div.sect.subject {
 }
 div.white-box div.sect.body {
+    white-space: pre-wrap;
+    word-wrap: break-word;
 	border-bottom: 0px;
 	font-size: 12px;
-	padding-bottom: 20px;
+	padding: 16px 20px 16px 10px;
 	color: #666;
 }
 div.divider { clear: left; height: 10px; }
