--- a/static/manage/css/store_details.1.0.css
+++ b/static/manage/css/store_details.1.0.css
@@ -1,3 +1,8 @@
+div#description p {
+    white-space: pre-wrap;
+    word-wrap: break-word;
+}
+
 div#notification{
 	margin-bottom:0;
 }
